--- a/stylus/assets/css/global/icons.styl
+++ b/stylus/assets/css/global/icons.styl
@@ -9,11 +9,72 @@
 	font-style: normal;
 }
 
-/* Use the following CSS code if you want to use data attributes for inserting your icons */
-[data-icon]:before {
+[class^="icon-glyph"]:before, [class*=" icon-glyph"]:before {
 	font-family: 'Bitponics-Glyphs';
-	content: attr(data-icon);
+	font-style: normal;
 	speak: none;
 	font-weight: normal;
 	-webkit-font-smoothing: antialiased;
+}
+.icon-reservior1:before {
+	content: "\2f";
+}
+.icon-seedling:before {
+	content: "\25";
+}
+.icon-vegetative:before {
+	content: "\24";
+}
+.icon-flowering:before {
+	content: "\23";
+}
+.icon-version:before {
+	content: "\22";
+}
+.icon-waterlevel2:before {
+	content: "\26";
+}
+.icon-ectds:before {
+	content: "\27";
+}
+.icon-light:before,
+.icon-lux:before,
+.icon-ir:before,
+.icon-full:before,
+.icon-vis:before {
+	content: "\28";
+}
+.icon-fan:before {
+	content: "\29";
+}
+.icon-water:before,
+.icon-sal:before,
+.icon-tds:before,
+.icon-ec:before,
+.icon-ph:before,
+.icon-waterpump:before {
+	content: "\2a";
+}
+.icon-air:before,
+.icon-co2:before,
+.icon-hum:before {
+	content: "\2b";
+}
+.icon-systemtype:before {
+	content: "\2c";
+}
+.icon-logo:before {
+	content: "\2d";
+}
+.icon-settings:before {
+	content: "\2e";
+}
+.icon-reservior2:before {
+	content: "\2f";
+}
+.icon-reservior3:before {
+	content: "\30";
+}
+.icon-reservior4:before {
+	content: "\31";
 }
