--- a/stylus/assets/css/tablet.styl
+++ b/stylus/assets/css/tablet.styl
@@ -15,10 +15,7 @@
 		width 100%
 		margin 2em 0 0 0
 	&.middle
-		width 100%
-		padding 100% 0 0 0 //must match container width
-		border 0 none
-		clear: both
+		//
 
 .data-module
 	@extends .display-ib
@@ -57,8 +54,13 @@ section#main
 #user
 	padding 0
 
-
-
+.dashboard
+	.content-module
+		&.middle
+			width 100%
+			padding 100% 0 0 0 //must match container width
+			border 0 none
+			clear: both
 
 @media screen and (min-width: 60em)
 	/*body
@@ -70,9 +72,7 @@ section#main
 		&.side
 			width 20%
 		&.middle
-			width 60%
-			padding 60% 0 0 0 //must match container width
-			clear none
+			//
 
 	.data-module
 		width 100%
@@ -106,3 +106,11 @@ section#main
 	#setup
 		width 30%
 		margin-right 30%
+
+	.dashboard
+		.content-module
+			&.middle
+				width 60%
+				padding 60% 0 0 0 //must match container width
+				clear none
+
